--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>AutoiQ</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+      <base href="/">
   </head>
   <body>
   <div class="container">
