--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       <base href="/">
   </head>
   <body>
-  <div class="container">
+  <div class="container-fluid">
     <autoiq-app>Loading...</autoiq-app>
   </div>
   </body>
