Added landing page and routing

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <title>AutoiQ</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+      <base href="/">
   </head>
   <body>
-  <div class="container">
+  <div class="container-fluid">
     <autoiq-app>Loading...</autoiq-app>
   </div>
   </body>
